overflow fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -229,6 +229,7 @@
 .slider {
   margin-top: 80px;
   position: relative;
+  overflow: hidden;
 }
 @media screen and (max-width: 767px) {
   .slider {
